# qq-farm-vision

./: .gitignore  README.md  pyproject.toml  requirement.txt
src/: action.py  base.py  config.py  detector.py  main.py  mapping.py  utils.py  vision.py
